--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -37,6 +37,13 @@
               >Fetch data</a
             >
           </li>
+
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/weather-data']"
+              >Weather data</a
+            >
+          </li>
+
         </ul>
       </div>
     </div>
