--- a/ClientApp/src/app/weather-data/show-weather/show-weather.component.html
+++ b/ClientApp/src/app/weather-data/show-weather/show-weather.component.html
@@ -10,10 +10,10 @@
 <button class="btn btn-lg btn-outline-primary float-right m-2" data-backdrop="static"
 data-keyboard="false" (click)="addWeatherClick()">Add New Weather</button>
 
-<button class="btn btn-lg btn-outline-primary float-right m-2" data-backdrop="static"
-data-keyboard="false" (click)="open(content)">Launch demo modal</button>
+<!-- <button class="btn btn-lg btn-outline-primary float-right m-2" data-backdrop="static"
+data-keyboard="false" (click)="open(content)">Launch demo modal</button> -->
 
-<ng-template #content let-modal>
+<!-- <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
@@ -36,7 +36,7 @@ data-keyboard="false" (click)="open(content)">Launch demo modal</button>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
   </div>
-</ng-template>
+</ng-template> -->
 
 
 <!-- <button type="button" class="btn btn-primary float-right m-2" 
